# NancyLines

./: README.md  main.py  nancy.yaml
data/: Sentences_Nancy.json  train.json
data/configs/: config.py
data/fake_street/: fake_street.parquet
deepseek-OCR/: extract_img_embeddings.py  train.py
deepseek-OCR/configs/src/: dataset.py  model.py  trainer.py
deepseek_ocr/: config.yaml
fine-tuning/: callbacks.py  config.py  config.yaml  data.py  eval.py  fine-tuning.py
fine-tuning/scripts/: run_train.sh
osm_nancy/: build_graph.py  compute_edges.py  evaluation_data.py  fetch_boundary.py  fetch_bus_relations.py  fetch_stops.py  fetch_streets.py  generate_pairs.py  process_bus_relations.py  utils.py
poi/: .gitignore  decontamination.py  eval.py  eval_callback.py  extract_gps_traces.py  extract_poi.py  jsonl_to_txt.py  make_datasets.py  make_gps_traces_datasets.py  make_poi_datasets.py  pyproject.toml  run.slurm  run.slurm.save.1  shuffle_jsonl.py  train.py  utils.py
process_data/: create_dataset.py  fake_street.py
