[project]
name = "geollm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "osmnx",
    "pandas",
    "matplotlib",
    "gpd",
    "transformers",
    "datasets",
    "peft",
    "bitsandbytes",
    "geopy",
    "vllm",
    "distro",
]
